Added the ability for the admin to change user roles